fix stacking messages spacing bug

--- a/apps/comms/css/comm-ui.css
+++ b/apps/comms/css/comm-ui.css
@@ -2,11 +2,12 @@
 	background: #303030;
 	padding: 5px;
 	padding-left: 1em;
+	padding-bottom: 0px;
 }
 .reduced_margin{
 	margin: 0px !important;
-	padding-top: 1px !important;
-	padding-bottom: 1px !important;
+	padding-top: 0px !important;
+	padding-bottom: 0px !important;
 }
 .msg_bar>:first-child{
 	font-weight: bolder;
