--- a/css/ui.css
+++ b/css/ui.css
@@ -1,6 +1,5 @@
 @import url(https://fonts.googleapis.com/css?family=Righteous);
-  
-  
+
  .title{
   display: inline-block;
   color: white;
@@ -12,6 +11,7 @@
  
 .box_widget{
 	display: inline-block;
+	transition: all 1s;
 	margin: 5px;
 	height: max-content;
 	max-width: max-content;
